src/main/script/deployment-account.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-service
  labels:
    name: account-service
spec:
  replicas: 1
  selector:
      matchLabels:
        name: account-service
  template:
    metadata:
      labels:
        name: account-service
    spec:
      containers:
      - name: account-service
        image: gcr.io/icepegasus/account-service
        ports:
        - containerPort: 2222
          protocol: TCP
