src/main/script/deployment-customer.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: customer-service
  labels:
    run: customer-service
spec:
  replicas: 1
  template:
    metadata:
      labels:
        run: customer-service
    spec:
      containers:
      - name: customer-service
        image: gcr.io/icepegasus/customer-service
        ports:
        - containerPort: 3333
          protocol: TCP
      - name: mongo
        image: library/mongo
        ports:
        - containerPort: 27017
          protocol: TCP
